# TPs-M2-Frugal-AI-back

./: .gitignore  README.md  pyproject.toml
src/practical/: utils.py
src/practical/data/: __init__.py  dataloaders.py
src/practical/models/: __init__.py  fourlayermlp.py  sentencebertencoder.py
src/practical/training/: __init__.py  utils.py
